# cmake-winui3

./: CMakeLists.txt  LICENSE  README.md
CppWinRTComponent/: CMakeLists.txt  Sample.idl  SampleClass.cpp  SampleClass.h  SampleControl.h
CppWinRTComponent/cmake/: NETCoreAppRef.cmake  WindowsAppSDK.cmake  cppwinrt.cmake  cswinrt.cmake  nuget.cmake
CppWinRTComponent/scripts/: generate_cppwinrt_comp.py  generate_cppwinrt_ref.py  generate_mdmerge_rsp.py  generate_midlrt_rsp.py
CsWinRTProjection/: CsWinRTProjection.sln
CsWinRTProjection/CsWinRTProjection/: CsWinRTProjection.csproj  Directory.Build.props
CsWinRTProjection/CsWinRTProjection/nuget/: Sample.nuspec
SampleControl/: CMakeLists.txt  Sample.idl  SampleControl.cpp
SampleControl/cmake/: nuget.cmake
SampleControl/nuget/: Sample.nuspec.in
SampleControl/scripts/: generate_cppwinrt_plat.py  generate_csc_rsp.py  generate_cswinrt_rsp.py
